# CG-2023-1

./: README.md  projection3.cpp
01-janela/: window
02-primitivas/: primitives  rectangle  rectangle2  triangle  triangle.cpp
03-transformacoes/: transform  transform2  transform2.py
04-projecoes/: projection3
05-iluminacao/: Makefile  ambient  diffuse  light  phong  phong.cpp  specular
CG/: CG.cpp  CG.h  CMakeLists.txt
GLUT/: Makefile  glut-tutorial
GLUT - Copia/: Makefile  Makefile copy  colors.cpp  colors.h  colors.hpp.old  fragment_code.fs  glut-tutorial.cpp  gutils.cpp  gutils.h  inputHandlers.h  myLibsGL.h  pudim.h  shadersUtils.cpp  shadersUtils.h  vertex_code.vs  window.cpp  window.h
GLUT/includes/: colors.h  gutils.h  input.h  pudim.h  renderScene.h  shadersUtils.h  window.h
GLUT/mkold/: Makefile.old
GLUT/src/: colors.cpp  fragment_code.fs  glut-tutorial.cpp  gutils.cpp  input.cpp  inputHandlers.cpp  renderScene.cpp  shadersUtils.cpp  vertex_code.vs  window.cpp
GLUT/src one file/: fragment_code.fs  glut-tutorial.cpp  input.cpp  pudim.cpp  shadersUtils.cpp  window.cpp
L02/: L02  L02.cpp  L02.h  Makefile  triangle
L03/: L02.cpp  L02.h  rectangle.cpp  triangle - Copia.cpp
old/glut/: colors.cpp  colors.hpp  glut-tutorial.cpp  glut.cbp  glut.depend  glut.layout  gutils.cpp  gutils.h  shadersUtils.cpp  shadersUtils.h  window.cpp  window.h
q07-interseccao/: projection  projection2  projection3  projection3.cpp
